
syntax = "proto3";

service CartService {
  // Sends a greeting
  rpc GetCart (CartRequest) returns (Cart) {}
}

// The request message containing the user's name.
message CartRequest {
  string userId = 1;
}

message Product {
  string id = 1;
  int32 quantity = 2;
  string description = 3;
  int32 value = 4;
}

// The response message containing the greetings
message Cart {
  string id = 1;
  string userId = 2;
  repeated Product produtcs = 3;
  float totalPrice = 4;
}
